--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <section>
         <div>
-            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
-            <p>#homem-aranha</p>
+            <h1> Blue lock melhores momentos?</h1>
+            <p>#blue lock</p>
         </div>
 
         <div><iframe width="633" height="351" src="https://www.youtube.com/embed/nDgB6ln16Ko" title="BLUE LOCK | Episódio 1 (Dublagem)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
